--- a/vscode/package.json
+++ b/vscode/package.json
@@ -2,7 +2,7 @@
     "name": "elvish",
     "displayName": "Elvish",
     "description": "Elvish language support for Visual Studio Code",
-    "version": "0.1.4",
+    "version": "0.2.0",
     "publisher": "elves",
     "license": "BSD-2-Clause",
     "icon": "icon.png",
@@ -15,9 +15,6 @@
     },
     "categories": [
         "Programming Languages"
-    ],
-    "activationEvents": [
-        "onLanguage:elvish"
     ],
     "main": "./dist/extension.js",
     "contributes": {
@@ -40,7 +37,7 @@
                     "elvish transcript"
                 ],
                 "extensions": [
-                    ".ttyshot"
+                    ".elvts"
                 ]
             },
             {
