vscode: Fix package.json.

--- a/vscode/package.json
+++ b/vscode/package.json
@@ -16,6 +16,7 @@
     "categories": [
         "Programming Languages"
     ],
+    "activationEvents": [],
     "main": "./dist/extension.js",
     "contributes": {
         "languages": [
