Implement `os:remove`
I considered adhering more closely to the traditional Unix `rm` and
`rmdir` commands. For example, by implementing each independently and
supporting the `--force` option. However, I concluded there are
insufficient reasons to do so. In particular, the POSIX `--force` (or
`-f`) option is most often used solely for its side-effect of making
elimination of a non-existent path a non-error. I also don't like that
`-f` also fixes permission errors to allow allow removing files. If we
decide that feature is needed it should be added under a distinct option
(e.g. `&fix-perms`).

Related: #1659

--- a/website/ref/index.toml
+++ b/website/ref/index.toml
@@ -45,6 +45,10 @@ name = "math"
 title = "math: Math Utilities"
 
 [[articles]]
+name = "os"
+title = "os: Operating System Utilities"
+
+[[articles]]
 name = "path"
 title = "path: Filesystem Path Utilities"
 
