--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,7 +118,8 @@ jobs:
       run: |
         go install golang.org/x/tools/cmd/stringer@latest
         go install golang.org/x/tools/cmd/goimports@latest
-        go install honnef.co/go/tools/cmd/staticcheck@v0.4.2
+        # Keep the versions of staticcheck and codespell in sync with CONTRIBUTING.md
+        go install honnef.co/go/tools/cmd/staticcheck@v0.4.5
         pip install --user codespell==2.2.5
     - name: Run checks
       run: make all-checks
