.github/workflows: Clean up workflow definitions.
- Fix the cache key used in check_website.yml. It was blindly copied from ci.yml
  and contained matrix parameters that are not present in this workflow.

- Simplify the derivation of OS_TYPE used for tagging coverages to use a ternary
  expression.

- Simplify the condition for uploading coverages by introducing a new "old-go"
  matrix parameter.

--- a/.github/workflows/check_website.yml
+++ b/.github/workflows/check_website.yml
@@ -47,8 +47,8 @@ jobs:
         path: |
           ~/go/pkg/mod
           ~/.cache/go-build
-        key: buildall/${{ matrix.os }}/1.20.x/${{ hashFiles('go.sum') }}/${{ github.sha }}
-        restore-keys: buildall/${{ matrix.os }}/1.20.x/${{ hashFiles('go.sum') }}
+        key: buildall/${{ hashFiles('go.sum') }}/${{ github.sha }}
+        restore-keys: buildall/${{ hashFiles('go.sum') }}
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
