.github/workflows: Fix step condition.
Expressions that start with ! must use ${{ }} explicitly:
https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idif

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,10 +52,10 @@ jobs:
         go test -race ./...
         cd website; go test -race ./...
     - name: Generate test coverage
-      if: !matrix.old-go
+      if: ${{ !matrix.old-go }}
       run: go test -coverprofile=cover -coverpkg=./pkg/... ./pkg/...
     - name: Save test coverage
-      if: !matrix.old-go
+      if: ${{ !matrix.old-go }}
       uses: actions/upload-artifact@v3
       with:
         name: cover-${{ matrix.os == 'ubuntu' && 'linux' || matrix.os }}
