Support using Elvish transcripts as tests.
- evaltest.TestTranscriptsInFS runs transcripts in .elv and .elvts files as
  tests.

- Extend the syntax of Elvish transcripts with headings and comments; the former
  is used to split a single .elvts file into multiple sessions.

--- a/vscode/package.json
+++ b/vscode/package.json
@@ -2,7 +2,7 @@
     "name": "elvish",
     "displayName": "Elvish",
     "description": "Elvish language support for Visual Studio Code",
-    "version": "0.2.3",
+    "version": "0.2.4",
     "publisher": "elves",
     "license": "BSD-2-Clause",
     "icon": "icon.png",
@@ -40,7 +40,8 @@
                 ],
                 "extensions": [
                     ".elvts"
-                ]
+                ],
+                "configuration": "./transcript-language-configuration.json"
             },
             {
                 "id": "elvish-in-markdown",
