--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -35,6 +35,16 @@ test_task:
           pkg install -y curl
           curl -L -o go.tar.gz https://go.dev/dl/go$GO_VERSION.freebsd-amd64.tar.gz
           tar -C /usr/local -xf go.tar.gz
+      setup_script:
+        # go test -race is not compatible with ASLR, which has been enabled by
+        # default since FreeBSD 13
+        # (https://wiki.freebsd.org/AddressSpaceLayoutRandomization). LLVM
+        # issue: https://github.com/llvm/llvm-project/issues/53256
+        #
+        # There's also a Go bug where using go test -race with ASLR fails
+        # to run the tests and still reports tests as passing:
+        # https://github.com/golang/go/issues/65425
+        sysctl kern.elf64.aslr.enable=0
     # To upgrade NetBSD environment:
     #   - Find the "VERSION:" variable for the NetBSD image:
     #     https://github.com/anarazel/pg-vm-images/blob/main/.cirrus.yml
