--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,17 +12,19 @@ defaults:
 jobs:
 
   test:
-    name: Run tests
+    # Provide an explict name to omit the "new-go" parameter, which is
+    # derived from go-version
+    name: Run tests (${{ matrix.os }}, ${{ matrix.go-version }})
     strategy:
       matrix:
         os: [ubuntu, macos, windows]
-        old-go: [false]
         go-version: [1.21.x]
+        new-go: [true]
         include:
           # Test old supported Go version
           - os: ubuntu
-            old-go: [true]
             go-version: 1.20.x
+            new-go: [false]
     env:
       ELVISH_TEST_TIME_SCALE: 20
     runs-on: ${{ matrix.os }}-latest
@@ -52,10 +54,10 @@ jobs:
         go test -race ./...
         cd website; go test -race ./...
     - name: Generate test coverage
-      if: ${{ !matrix.old-go }}
+      if: matrix.new-go
       run: go test -coverprofile=cover -coverpkg=./pkg/... ./pkg/...
     - name: Save test coverage
-      if: ${{ !matrix.old-go }}
+      if: matrix.new-go
       uses: actions/upload-artifact@v3
       with:
         name: cover-${{ matrix.os == 'ubuntu' && 'linux' || matrix.os }}
