--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -102,7 +102,7 @@ check_binary_checksums_task:
     ts=$(git show -s --format=%ct HEAD)
     wait=10
     while true; do
-      website_ts=$(curl -sS https://$HOST.elv.sh/commit-ts.txt)
+      website_ts=$(curl -sSf https://$HOST.elv.sh/commit-ts.txt)
       if test -z "$website_ts"; then
         echo "website has no commit-ts.txt yet"
       elif test "$website_ts" -ge "$ts"; then
