--- a/.github/workflows/check_website.yml
+++ b/.github/workflows/check_website.yml
@@ -22,14 +22,15 @@ jobs:
         ts=$(git show -s --format=%ct HEAD)
         wait=10
         while true; do
-          website_ts=$(curl -sSf https://${{ matrix.host }}.elv.sh/commit-ts.txt)
-          if test -z "$website_ts"; then
-            echo "website has no commit-ts.txt yet"
-          elif test "$website_ts" -ge "$ts"; then
-            echo "website ($website_ts) >= current ($ts)"
-            exit 0
+          if website_ts=$(curl -sSf https://${{ matrix.host }}.elv.sh/commit-ts.txt); then
+            if test "$website_ts" -ge "$ts"; then
+              echo "website ($website_ts) >= current ($ts)"
+              exit 0
+            else
+              echo "website ($website_ts) < current ($ts)"
+            fi
           else
-            echo "website ($website_ts) < current ($ts)"
+            echo "website has no commit-ts.txt yet"
           fi
           sleep $wait
           test $wait -lt 96 && wait=`echo "$wait * 2" | bc`
