--- a/website/ref/index.toml
+++ b/website/ref/index.toml
@@ -45,6 +45,10 @@ name = "math"
 title = "math: Math Utilities"
 
 [[articles]]
+name = "md"
+title = "md: Markdown Utilities"
+
+[[articles]]
 name = "os"
 title = "os: Operating system functionality"
 
