website: Revamp /get.
- Make the homepage an interactive page to generate an installation script.

- Move the other content into their individual pages.

  - Add Repology badges for all individual package managers.

--- a/website/get/index.toml
+++ b/website/get/index.toml
@@ -1,2 +1,16 @@
 prelude = "prelude"
 extraCSS = ["prelude.css"]
+extraJS = ["prelude.js"]
+autoIndex = true
+
+[[articles]]
+name = "default-shell"
+title = "Using Elvish as your default shell"
+
+[[articles]]
+name = "package-manager"
+title = "Installing Elvish with a package manager"
+
+[[articles]]
+name = "all-binaries"
+title = "All binaries available for download"
