--- a/website/learn/index.toml
+++ b/website/learn/index.toml
@@ -11,14 +11,14 @@ group = 0
 
 [[articles]]
 name = "tour"
-title = "Quick Tour"
+title = "Quick tour"
 note = "if you have experience with other shells or programming languages"
 extraCSS = ["tour.css"]
 group = 0
 
 [[articles]]
 name = "scripting-case-studies"
-title = "Scripting Case Studies"
+title = "Scripting case studies"
 note = "explainers for all the scripting examples on the homepage"
 group = 0
 
@@ -27,7 +27,7 @@ intro = "Advanced topics:"
 
 [[articles]]
 name = "unique-semantics"
-title = "Unique Semantics"
+title = "Unique semantics"
 group = 1
 
 [[articles]]
